<resources>
    <string name="app_name">Android Notes</string>
    <string name="about">About</string>
    <string name="add_note">Add Note</string>
    <string name="name">Name</string>
    <string name="date_time">Time</string>
    <string name="no_file">No JSON Product File Present</string>
    <string name="file_name">Note.json</string>
    <string name="existing_note">info</string>
    <string name="note_position">position</string>
    <string name="new_or_edited_note">existingNote</string>
    <string name="note_is_new">isNew</string>
    <string name="delete_file_name">Delete.json</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="undo">Undo Deleted Note</string>
    <string name="note_s_name">Note\'s Name</string>
    <string name="android_notes">Android Notes</string>
    <string name="info">© 2022, Linh Do</string>
    <string name="contribute">Contributors:  </string>
    <string name="contributors">Mike Maloney \nDave Patel \nSebastian Savovic </string>
    <string name="version"> Version 1.1</string>
    <string name="notes">Notes</string>
    <string name="open_tasks">Open Tasks</string>
    <string name="tasks">Tasks</string>
    <string name="cancel">Cancel</string>
    <string name="add_task">Add Task</string>
</resources>