<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#8E9EF3"
        android:paddingBottom="4dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8E9EF3"
        android:gravity="end"
        android:paddingBottom="4dp"
        android:text="@string/date_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#1A237E"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8E9EF3"
        android:paddingBottom="4dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#1A237E"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/date" />

</androidx.constraintlayout.widget.ConstraintLayout>